hphp/test/zend/good/Zend/tests/bug46381.php.expectf

Fatal error: Non-static method ArrayIterator::current() cannot be called statically in %s/bug46381.php on line 5
